[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Pause.gd" type="Script" id=1]

[node name="Pause" type="CanvasLayer"]

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/CenterContainer"]
margin_left = 603.0
margin_top = 326.0
margin_right = 676.0
margin_bottom = 394.0

[node name="Resume" type="Button" parent="Pause/CenterContainer/VBoxContainer"]
margin_right = 73.0
margin_bottom = 20.0
text = "Resume"

[node name="ExitLevel" type="Button" parent="Pause/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 73.0
margin_bottom = 44.0
text = "Exit Level"

[node name="Quit" type="Button" parent="Pause/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 73.0
margin_bottom = 68.0
text = "Quit"
[connection signal="pressed" from="Pause/CenterContainer/VBoxContainer/Resume" to="Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/CenterContainer/VBoxContainer/ExitLevel" to="Pause" method="_on_ExitLevel_pressed"]
[connection signal="pressed" from="Pause/CenterContainer/VBoxContainer/Quit" to="Pause" method="_on_Quit_pressed"]
